--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
-<title> First love WebSite
+<title> First love WebSite CONNECTED TO GIT
 </title>
 <head>
-<h1> Darling, welcome to this is my beautifull websit</h1>
+<h1> Hi Darling, welcome to this is my beautifull websit</h1>
 </head>
 <p> :) X) :D XD
  </p>
