--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
-<title> First love WebSite CONNECTED TO GIT
+<title> First love WebSite CONNECTED TO GIT now GIT TO Local Repo
 </title>
 <head>
 <h1> Hi Darling, welcome to this is my beautifull websit</h1>
 </head>
-<p> :) X) :D XD
+<p> :) X) :D XD :)
  </p>
 </html>
