made changes index.html to featureb merge

--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
 <h1> Hi Darling, welcome to this is my beautifull websit</h1>
 </head>
 <p> :) X) :D XD :)
- </p>
+added feature-A and merge config </p>
 </html>
