--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 <h1> Hi Darling, welcome to this is my beautifull websit</h1>
 </head>
 <p> :) X) :D XD :)
-added feature-A and merge config </p>
+added feature-A and merge 
+added by feautre A work fo meger config together </p>
 </html>
