--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@ e<html>
 <h1> Hi Darling, welcome to this is my beautifull websit</h1>
 </head>
 <p> :) X) :D XD :)
-<<<<<<< HEAD
-feture-B WORKS </p>
-=======
+<p> feture-B WORKS </p>
 added feature-A and merge 
-added by feautre A work fo meger config together </p>
+added by feautre A work fo meger config together
 added by main work
->>>>>>> feature-A
+feature-A
 added work by feature-B
 work with B and main
 work owth mergetool -t vimdiff
+</p>
 </html>
